# opendott

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf  west.yml
.github/workflows/: build.yml  web.yml
boards/arm/opendott/: Kconfig  Kconfig.board  Kconfig.defconfig  board.yml  opendott-pinctrl.dtsi  opendott.dts  opendott_defconfig  opendott_nrf52840.dts  opendott_nrf52840_defconfig
docs/: BLE_PROTOCOL.md  PROTOCOL.md  README.md  building.md  full-reverse-engineering.md  hardware.md  protocol.md  reverse-engineering.md  roadmap.md
firmware/: CMakeLists.txt  README.md  prj.conf  prj_minimal.conf
firmware/boards/arm/opendott/: Kconfig.opendott  opendott_nrf52840.dts
firmware/dts/bindings/: opendott,gc9a01.yaml
firmware/include/: opendott.h
firmware/src/: main.c  main_minimal.c
include/: opendott.h
src/: ble_service.c  button.c  display.c  image_handler.c  main.c  storage.c
tools/: README.md  dott_discover.py  dott_flash.py  dott_upload.py  dott_upload_captured.py  dott_upload_correct.py  dott_upload_final.py  dott_upload_v2.py  dott_upload_v3.py  dott_upload_v4.py  dott_upload_v5.py  dott_upload_v6.py  emergency_recovery.py  requirements.txt  test_smp.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: 404.html  CNAME
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/components/: DeviceStatus.tsx  ImageUploader.tsx
web/src/hooks/: useBle.ts
web/src/lib/: ble.ts  gifConverter.ts  gifOptimizer.ts  image.ts  smp.ts
web/src/pages/: Flash.tsx
